cabal-version:       2.2

name:                new-framework-core
version:             0.1.0.0
synopsis:            New framework core
description:         Native framework-core AST, effect DSL, runtime interpreter, validation, proof, semantic evidence, and witness executables.
license:             BSD-3-Clause
license-file:        ../LICENSE
author:              onetime
maintainer:          1018248628@qq.com
copyright:           2026 onetime
category:            Application
build-type:          Custom

custom-setup
  setup-depends:      base >= 4.7 && < 5
                    , Cabal >= 2.2

library
  hs-source-dirs:      src
  exposed-modules:     Blueprint
                     , Bootstrap.Blueprint
                     , Bootstrap.Business
                     , Bootstrap.CoreSurface
                     , Bootstrap.Effect
                     , Bootstrap.Effects
                     , Bootstrap.Effects.CoreArtifact.Facts.SelfArtifactManifestEvidencePassed
                     , Bootstrap.Effects.CoreArtifact.Registration.Effect
                     , Bootstrap.Effects.CoreBoundary.Facts.CoreBoundaryValidated
                     , Bootstrap.Effects.CoreBoundary.Facts.FrontendBoundaryValidated
                     , Bootstrap.Effects.CoreBoundary.Facts.ImportGraphBuilt
                     , Bootstrap.Effects.CoreBoundary.Registration.Effect
                     , Bootstrap.Effects.CoreExpression.Facts.FrameworkCoreExpression
                     , Bootstrap.Effects.CoreExpression.Registration.Effect
                     , Bootstrap.Effects.CoreLanguage.Facts.ElaborationContractValidated
                     , Bootstrap.Effects.CoreLanguage.Facts.LanguageSpecValidated
                     , Bootstrap.Effects.CoreLanguage.Registration.Effect
                     , Bootstrap.Effects.CoreModule.Facts.CoreHostModulesClassified
                     , Bootstrap.Effects.CoreModule.Facts.FrameworkCoreModulesClassified
                     , Bootstrap.Effects.CoreModule.Facts.PackageModulesDiscovered
                     , Bootstrap.Effects.CoreModule.Registration.Effect
                     , Bootstrap.Effects.CoreProof.Facts.ConstraintIRBuilt
                     , Bootstrap.Effects.CoreProof.Facts.MinimalCoreReportBuilt
                     , Bootstrap.Effects.CoreProof.Facts.SmtProofPassed
                     , Bootstrap.Effects.CoreProof.Registration.Effect
                     , Bootstrap.Effects.CoreRegistry.Facts.RegistryCodegenEvidencePassed
                     , Bootstrap.Effects.CoreRegistry.Registration.Effect
                     , Bootstrap.Effects.CoreReport.Facts.FrameworkCoreReportPublished
                     , Bootstrap.Effects.CoreReport.Registration.Effect
                     , Bootstrap.Effects.CoreRuntime.Facts.RuntimeEvidencePassed
                     , Bootstrap.Effects.CoreRuntime.Registration.Effect
                     , Bootstrap.Effects.CoreSurface.Registration.Effect
                     , Bootstrap.RegistryCodegen
                     , Bootstrap.Report
                     , Bootstrap.Runtime
                     , Bootstrap.Runtime.BootstrapHandlers
                     , Bootstrap.Runtime.Boundary
                     , Bootstrap.Runtime.Build
                     , Bootstrap.Runtime.Contract
                     , Bootstrap.Runtime.Interpreter
                     , Bootstrap.Runtime.SourceGraph
                     , Bootstrap.Runtime.Types
                     , Bootstrap.Vocabulary
                     , Bootstrap.Workflow
                     , Domain.Ast
                     , Domain.EffectHandlers
                     , Domain.Effects
                     , Domain.AppBlueprint
                     , Domain.Interpreter
                     , Domain.Registry
                     , Domain.Vocabulary
                     , Framework.Background
                     , Framework.Background.ConstraintProof
                     , Framework.Background.RuntimeDiagnosis
                     , Framework.Ast
                     , Framework.Business
                     , Framework.Domain
                     , Framework.Effect
                     , Framework.FixedPoint
                     , Framework.Handler
                     , Framework.RegistryCodegen
                     , Framework.Runtime
                     , Framework.Runtime.Concurrency
                     , Framework.Runtime.Diagnosis
                     , Framework.Runtime.Evidence
                     , Framework.Runtime.Handlers
                     , Framework.Runtime.HotPath
                     , Framework.Runtime.Interpreter
                     , Framework.Runtime.Policy
                     , Framework.Runtime.Types
                     , Framework.Runtime.Values
                     , Framework.SelfArtifact
                     , Framework.TrustBase
                     , Framework.TrustBase.Manifest
                     , Framework.Workflow
                     , Framework.Workflow.Semantics
                     , FrameworkCore.BaseApp
                     , FrameworkCore.CurrentApp
                     , FrameworkCore.CurrentAst
                     , FrameworkCore.CurrentEffects
                     , FrameworkCore.CurrentInterpreter
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , directory
                     , filepath
                     , process
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable framework-core-mytest
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable bootstrap-smoke
  hs-source-dirs:      app
  main-is:             BootstrapSmoke.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable bootstrap-runtime-smoke
  hs-source-dirs:      app
  main-is:             BootstrapRuntimeSmoke.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable bootstrap-report
  hs-source-dirs:      app
  main-is:             BootstrapReport.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable ast-tree
  hs-source-dirs:      app
  main-is:             AstTree.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable domain-registry
  hs-source-dirs:      app
  main-is:             RegistryReport.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable domain-map
  hs-source-dirs:      app
  main-is:             DomainMap.hs
  other-modules:       Domain.Relations
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable fixed-point-smoke
  hs-source-dirs:      app
  main-is:             FixedPointSmoke.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable self-artifact-witness
  hs-source-dirs:      app
  main-is:             SelfArtifactWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable workflow-semantics-witness
  hs-source-dirs:      app
  main-is:             WorkflowSemanticsWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable runtime-evidence-witness
  hs-source-dirs:      app
  main-is:             RuntimeEvidenceWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable runtime-policy-witness
  hs-source-dirs:      app
  main-is:             RuntimePolicyWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable runtime-hot-path-witness
  hs-source-dirs:      app
  main-is:             RuntimeHotPathWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable constraint-proof-witness
  hs-source-dirs:      app
  main-is:             ConstraintProofWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable framework-core-frontend-witness
  hs-source-dirs:      app
  main-is:             FrameworkCoreFrontendWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable trust-base-manifest-witness
  hs-source-dirs:      app
  main-is:             TrustBaseManifestWitness.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , new-framework-core
                     , process
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
